--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -27,6 +27,7 @@
 
 import init.qcom.power.rc
 import init.qcom.usb.rc
+import init.extra.rc
 
 on early-init
     symlink /data/tombstones /tombstones
