init: Add system group to netmgrd process
To allow netmgrd to acquire wakelocks correctly
we need to ensure that it belongs to system group

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1016,4 +1016,6 @@ service msm_irqbalance /system/bin/msm_irqbalance -f /system/vendor/etc/msm_irqb
 # Data Switch hack
 service netmgrd /system/bin/sh /system/etc/netmgrd_control.sh
     class main
+    user root
+    group root wifi wakelock radio inet oem_2950
     writepid /dev/cpuset/system-background/tasks
